--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "sass-embedded": "^1.80.4",
     "vite": "^5.3.4"
   }
 }
